force-app/main/default/objects/VS_Scenario__c/VS_Scenario__c.object-meta.xml
<CustomObject>
    <description>수익성 요청 시 생성되는 시나리오 마스터 정보를 관리하는 Object</description>
    <label>Scenario</label>
    <nameField>
        <label>Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenarios</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>