force-app/main/default/objects/VS_Scenario__c/fields/COGSCost__c.field-meta.xml
<CustomField>
    <fullName>COGSCost__c</fullName>
    <label>COGS Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>