force-app/main/default/objects/VS_Scenario__c/fields/CustomRefundCost__c.field-meta.xml
<CustomField>
    <fullName>CustomRefundCost__c</fullName>
    <label>Custom Refund Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>