force-app/main/default/objects/VS_Scenario__c/fields/DeltaAmount__c.field-meta.xml
<CustomField>
    <fullName>DeltaAmount__c</fullName>
    <label>Delta Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>