force-app/main/default/objects/VS_Scenario__c/fields/DeltaMaginalAmount__c.field-meta.xml
<CustomField>
    <fullName>DeltaMaginalAmount__c</fullName>
    <label>Delta Maginal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>