force-app/main/default/objects/VS_Scenario__c/fields/DeltaPrice__c.field-meta.xml
<CustomField>
    <fullName>DeltaPrice__c</fullName>
    <label>Delta Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>