force-app/main/default/objects/VS_Scenario__c/fields/DeltaProfitRate__c.field-meta.xml
<CustomField>
    <fullName>DeltaProfitRate__c</fullName>
    <label>Delta Profit Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>