force-app/main/default/objects/VS_Scenario__c/fields/EmplyeeNo__c.field-meta.xml
<CustomField>
    <fullName>EmplyeeNo__c</fullName>
    <description>수익성 완료한 사람 사번</description>
    <label>Emplyee No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>