force-app/main/default/objects/VS_Scenario__c/fields/ErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>ErrorDescription__c</fullName>
    <label>Error Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>