force-app/main/default/objects/VS_Scenario__c/fields/FirstConfirmFlag__c.field-meta.xml
<CustomField>
    <fullName>FirstConfirmFlag__c</fullName>
    <description>Y, N</description>
    <label>First Confirm Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>