force-app/main/default/objects/VS_Scenario__c/fields/l_COIRequest__c.field-meta.xml
<CustomField>
    <fullName>l_COIRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COI Request</label>
    <referenceTo>VS_COIRequest__c</referenceTo>
    <relationshipLabel>Scenarios</relationshipLabel>
    <relationshipName>Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>