force-app/main/default/objects/VS_Scenario__c/fields/MaginalProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>MaginalProfitAmount__c</fullName>
    <label>Maginal Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>