force-app/main/default/objects/VS_Scenario__c/fields/MaterialCost__c.field-meta.xml
<CustomField>
    <fullName>MaterialCost__c</fullName>
    <label>Material Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>