force-app/main/default/objects/VS_Scenario__c/fields/MergeYn__c.field-meta.xml
<CustomField>
    <fullName>MergeYn__c</fullName>
    <description>통합 : Y,  단독 : N</description>
    <label>Merge Yn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>