force-app/main/default/objects/VS_Scenario__c/fields/QuoteAmount__c.field-meta.xml
<CustomField>
    <fullName>QuoteAmount__c</fullName>
    <description>견적 금액</description>
    <label>Quote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>