force-app/main/default/objects/VS_Scenario__c/fields/RoyaltyCost__c.field-meta.xml
<CustomField>
    <fullName>RoyaltyCost__c</fullName>
    <label>Royalty Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>