force-app/main/default/objects/VS_Scenario__c/fields/SalesDeductionCost__c.field-meta.xml
<CustomField>
    <fullName>SalesDeductionCost__c</fullName>
    <label>Sales Deduction Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>