force-app/main/default/objects/VS_Scenario__c/fields/ScenarioCode__c.field-meta.xml
<CustomField>
    <fullName>ScenarioCode__c</fullName>
    <label>Scenario Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>