force-app/main/default/objects/VS_Scenario__c/fields/SecondConfirmFlag__c.field-meta.xml
<CustomField>
    <fullName>SecondConfirmFlag__c</fullName>
    <description>Y, N</description>
    <label>Second Confirm Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>