force-app/main/default/objects/VS_Scenario__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Complete</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Error</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Drop</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>