force-app/main/default/objects/VS_Scenario__c/fields/TransferDate__c.field-meta.xml
<CustomField>
    <fullName>TransferDate__c</fullName>
    <description>전송 시간</description>
    <label>Transfer Date</label>
    <type>DateTime</type>
</CustomField>