force-app/main/default/objects/VS_Scenario__c/fields/Transportation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Cost__c</fullName>
    <label>Transportation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>