force-app/main/default/objects/VS_Scenario__c/fields/USDCustomRefundCost__c.field-meta.xml
<CustomField>
    <fullName>USDCustomRefundCost__c</fullName>
    <label>USD Custom Refund Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>