force-app/main/default/objects/VS_Scenario__c/fields/USDMaterialCost__c.field-meta.xml
<CustomField>
    <fullName>USDMaterialCost__c</fullName>
    <label>USD Material Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>