force-app/main/default/objects/VS_Scenario__c/fields/USDSalesDeductionCost__c.field-meta.xml
<CustomField>
    <fullName>USDSalesDeductionCost__c</fullName>
    <label>USD Sales Deduction Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>