force-app/main/default/objects/VS_Scenario__c/fields/USDTransportationCost__c.field-meta.xml
<CustomField>
    <fullName>USDTransportationCost__c</fullName>
    <label>USD Transportation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>