force-app/main/default/objects/VS_Scenario__c/fields/USDVatExclSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>USDVatExclSalesPrice__c</fullName>
    <label>USD Vat Excl Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>