force-app/main/default/objects/VS_Scenario__c/fields/USDVatInclSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>USDVatInclSalesPrice__c</fullName>
    <label>USD Vat Incl Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>