force-app/main/default/objects/VS_Scenario__c/fields/VatInclSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>VatInclSalesPrice__c</fullName>
    <label>Vat Incl Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>