force-app/main/default/objects/VS_Scenario__c/fields/VersionId__c.field-meta.xml
<CustomField>
    <fullName>VersionId__c</fullName>
    <description>버전 ID는 number type이므로 COI request 번호를 넘버로 채번해서 version id에 넣고 IF 해주면 될듯.</description>
    <label>Version Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>